--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ glow = "0.11"
 quick_from = "0.2.0"
 winit_input_helper = "0.10.0"
 image = "0.23.14"
+rand = { version = "0.8.4", features = ["small_rng"] }
+statrs = "0.15.0"
 
