--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 bytemuck = "1.7.2"
 glam = { version = "0.20.0", features = [ "bytemuck" ] }
 egui = "0.15.0"
-egui_glow = "0.15.0"
+egui_glow = { version = "0.15.0", default-features = false }
 glutin = "0.27"
 glow = "0.11"
 quick_from = "0.2.0"
